add config cache to missing specs